--- a/src/main/webapp/app/entities/personnels/personnels-detail.component.html
+++ b/src/main/webapp/app/entities/personnels/personnels-detail.component.html
@@ -1,6 +1,5 @@
 
-<jhi-personnels></jhi-personnels>
-<ng-template [ngIf]="personnelService.detail==true">
+<ng-template [ngIf]="getPersonnelService().detail==true">
     <div class="container">
         <div class="table-responsive">
                <!-- <a (click)="previousState() " class="btn btn-sm btn-info mb-2"><i jhiTranslate="outilDiagnostic.eleve.retour" class="fa fa-caret-left"></i></a>-->
