--- a/src/main/webapp/app/entities/eleve/eleve.component.html
+++ b/src/main/webapp/app/entities/eleve/eleve.component.html
@@ -4,28 +4,28 @@
     <ul class="nav nav-tabs nav-justified">    
       <!--- Menu pour une recherche d'éléve-->  
       <li class="nav-item">
-          <a  [class.active]="critereRechercheService.ongletActive=='resume'" [class.nav-link]='true' (click)="ongletActif('resume')"   jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
+          <a  [class.active]="getCritereRechercheService().ongletActive=='resume'" [class.nav-link]='true' (click)="ongletActif('resume')"   jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
         </li>
       <li class="nav-item" >
-          <a [class.active]="critereRechercheService.ongletActive=='siecle'" [class.nav-link]='true'  (click)="ongletActif('siecle')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
+          <a [class.active]="getCritereRechercheService().ongletActive=='siecle'" [class.nav-link]='true'  (click)="ongletActif('siecle')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
       </li>
       <li class="nav-item">
-            <a  [class.active]="critereRechercheService.ongletActive=='aaf'" [class.nav-link]='true' (click)="ongletActif('aaf')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
+            <a  [class.active]="getCritereRechercheService().ongletActive=='aaf'" [class.nav-link]='true' (click)="ongletActif('aaf')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
       </li>
       <li class="nav-item" >
-            <a  [class.active]="critereRechercheService.ongletActive=='toutatice'" [class.nav-link]='true' (click)="ongletActif('toutatice')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
+            <a  [class.active]="getCritereRechercheService().ongletActive=='toutatice'" [class.nav-link]='true' (click)="ongletActif('toutatice')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
       </li>
       <li class="nav-item">
-          <a  [class.active]="critereRechercheService.ongletActive=='eduConnect'" [class.nav-link]='true' (click)="ongletActif('eduConnect')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
+          <a  [class.active]="getCritereRechercheService().ongletActive=='eduConnect'" [class.nav-link]='true' (click)="ongletActif('eduConnect')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
       </li>
       <li class="nav-item">
-        <a  [class.active]="critereRechercheService.ongletActive=='aten'" [class.nav-link]='true' (click)="ongletActif('aten')"   jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
+        <a  [class.active]="getCritereRechercheService().ongletActive=='aten'" [class.nav-link]='true' (click)="ongletActif('aten')"   jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
       </li>
     </ul>
 </div>
 <div class="container-fluid  mb-3">
     <!-- onglet resume-->
-        <div *ngIf="critereRechercheService.ongletActive=='resume'">
+        <div *ngIf="getCritereRechercheService().ongletActive=='resume'">
             <div class="row">
                 <!--  <div class="col-sm-12">-->
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></h4>
@@ -196,13 +196,13 @@
     </div>
     <!-- onglet resume-->
     <!-- onglet siecle-->
-    <div *ngIf="critereRechercheService.ongletActive=='siecle'">
+    <div *ngIf="getCritereRechercheService().ongletActive=='siecle'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></h4>
                     <div class="table-responsive">
                         <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
-                                <tr><div *ngIf="critereRechercheService.ongletActive=='aaf'"></div>
+                                <tr>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.nom"></th>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.prenom"></th>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.identifiant"></th>
@@ -236,7 +236,7 @@
     <!-- onglet siecle-->
 
      <!-- onglet aaf-->
-    <div *ngIf="critereRechercheService.ongletActive=='aaf'">
+    <div *ngIf="getCritereRechercheService().ongletActive=='aaf'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></h4>
                     <div class="table-responsive">
@@ -272,7 +272,7 @@
      <!-- onglet aaf-->
 
       <!-- onglet toutatice-->
-    <div *ngIf="critereRechercheService.ongletActive=='toutatice'">
+    <div *ngIf="getCritereRechercheService().ongletActive=='toutatice'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></h4>
                     <div class="table-responsive">
@@ -307,7 +307,7 @@
     </div>
      <!-- ongglet toutatice-->
      <!-- onglet eduConnect-->
-    <div *ngIf="critereRechercheService.ongletActive=='eduConnect'">
+    <div *ngIf="getCritereRechercheService().ongletActive=='eduConnect'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></h4>
                     <div class="table-responsive">
@@ -342,7 +342,7 @@
     </div>
     <!-- ongglet eduConnect-->
     <!-- ongglet aten-->
-    <div *ngIf="critereRechercheService.ongletActive=='aten'">
+    <div *ngIf="getCritereRechercheService().ongletActive=='aten'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></h4>
                     <div class="table-responsive">
