remplissage donne pour prez etat onglet ok

--- a/src/main/webapp/app/entities/representant-legal/representant-legal-detail.component.html
+++ b/src/main/webapp/app/entities/representant-legal/representant-legal-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
     <div class="table-responsive">
             <a (click)="previousState() " class="btn btn-sm btn-info mb-2"><i jhiTranslate="outilDiagnostic.eleve.retour" class="fa fa-caret-left"></i></a>
         <table class="table table-sm">
@@ -159,4 +159,4 @@
                           </div>
                       </div>
                     </div>
-                  </ng-template>
+                  </ng-template>-->
